Add minimal library dependencies to embedded libraries

--- a/dm2kApp/graphX/Makefile
+++ b/dm2kApp/graphX/Makefile
@@ -159,6 +159,9 @@ LIBRARY=GraphX
 #Xt_DIR = $(X11_LIB)
 #X11_DIR = $(X11_LIB)
 
+LIB_SYS_LIBS += Xm Xt X11
+LIB_LIBS += PrintUtils
+
 # for most systems:
 #USR_LIBS_DEFAULT = foolib
 #USR_LIBS_WIN32   = -nil-
