--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Package: libdm2k2.6.2
 Section: non-free/libs
 Architecture: any
 Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Motif Display Manager for EPICS Private Libraries
  A Motif display manager (GUI) for the EPICS control system.
